# 0-lang

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml
examples/: hello_world.0  simple_math.0
schema/: zero.capnp
src/: events.rs  graph.rs  lib.rs  main.rs  stdlib.rs  tensor.rs  verify.rs  vm.rs
src/stdlib/: json.rs  mod.rs
tests/: conformance.rs
