[package]
name = "zerolang"
version = "0.1.0"
edition = "2021"
description = "Agent-to-Agent programming language"
license = "Apache-2.0"

[[bin]]
name = "zero"
path = "src/main.rs"

[dependencies]
capnp = "0.20"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }

# New dependencies for trading applications
rust_decimal = "1.33"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

[build-dependencies]
capnpc = "0.20"
